# prettui

./: Cargo.toml  LICENSE  README.md
examples/: io-input.rs  io-output.rs  io-prompt.rs  io.rs  list.rs
src/: color.rs  lib.rs  list.rs  main.rs
src/io/: input.rs  mod.rs  output.rs  prompt.rs
